# sidecar_comms

./: CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yaml  publish-docs.yaml  publish.yaml
src/sidecar_comms/: __init__.py  inbound.py  manager.py  models.py  outbound.py
src/sidecar_comms/form_cells/: base.py  models.py  observable.py  openai_api.py
src/sidecar_comms/handlers/: main.py  variable_explorer.py
tests/: conftest.py  test_sidecar_comms.py
tests/test_inbound/: test_form_cells.py  test_rename.py  test_variable_explorer.py
