[tool.poetry]
name = "sidecar_comms"
version = "0.1.0"
description = "Comms package for messaging with kernel sidecar"
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://app.noteable.io/"
repository = "https://github.com/noteable-io/sidecar_comms"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.19.4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.11.3"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.coverage.run]
branch = false
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = ["if self.debug:",
                 "pragma: no cover",
                 "raise AssertionError",
                 "raise NotImplementedError",
                 "if __name__ == '__main__':"]
ignore_errors = true
omit = []
